<resources>
    <string name="googleMapApiKey" translatable="false">AIzaSyA55ONWFBc0yBvM-s5Qa_iT_2aPrsNOt8o</string>
    <string name="app_name">Flight Tracker</string>
    <string name="live_flight_track">Live Flight Track</string>
    <string name="choose_language">Choose language</string>
    <string name="tvArabic">العربية</string>
    <string name="tvVietnamese">Vietnamese</string>
    <string name="tvBangladeshi">বাংলা</string>
    <string name="tvChinese">中文</string>
    <string name="tvEnglish">English</string>
    <string name="tvFrench">Français</string>
    <string name="tvHindi">हिंदी</string>
    <string name="tvIndia" translatable="false">India</string>
    <string name="tvIndonesia">Indonesia</string>
    <string name="tvPortuguese">Português</string>
    <string name="tvPolish">Polski</string>
    <string name="tvRussian">Русский</string>
    <string name="tvSpanish">Español</string>
    <string name="tvTurkish">Türkçe</string>
    <string name="tvUrdu">اردو</string>
    <string name="live_flight">Live Flight</string>
    <string name="tracker">Tracker</string>
    <string name="airports_flights_more">Airports, Flights &amp; more</string>
    <string name="track_followed_flights">Track Followed Flights</string>
    <string name="nearby">Nearby</string>
    <string name="explore_airports_near_you">Explore airports near you</string>
    <string name="view_past_and_feature_details">View past and feature details</string>
    <string name="schedules">Schedules</string>
    <string name="view_starred_flights">View Starred Flights</string>
    <string name="saved_flights">Saved Flights</string>
    <string name="followed_flights">Followed Flights</string>
    <string name="start_search_now">Start Search Now</string>
    <string name="view_map">View Map</string>
    <string name="flight_tracker">Flight Tracker</string>
    <string name="live_map">Live Map</string>
    <string name="go_pro_to_gain_full_access">Go Pro to gain full access</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_apps">More Apps</string>
    <string name="share_app">Share App</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="measurement_units">Measurement Units</string>
    <string name="change_map_style">Change Map Style</string>
    <string name="select_language">Select Language</string>
    <string name="settings">Settings</string>
    <string name="upgrade">Upgrade</string>
    <string name="find_airport_details_routes_and_scheduled_flights">Find airport details, routes, and scheduled flights.</string>
    <string name="search">Search</string>
    <string name="airports">Airports</string>
    <string name="aircraft">Aircraft</string>
    <string name="track_specific_aircraft_by_type_or_model">Track specific aircraft by type or model.</string>
    <string name="airline">Airline</string>
    <string name="explore_global_airlines_and_their_active_flights">Explore global airlines and their active flights.</string>
    <string name="tail_number">Tail Number</string>
    <string name="track_aircraft_by_registration_or_icao24_number">Track aircraft by registration or ICAO24 number.</string>
    <string name="search_airport_or_city">Search Airport or City</string>
    <string name="search_airport">Search Airport</string>
    <string name="karach_airport">Karach Airport</string>
    <string name="airport_search">Airport Search</string>
    <string name="view_details">View Details</string>
    <string name="search_flight_number">Search Flight Number</string>
    <string name="search_aircarft">Search Aircarft</string>
    <string name="search_airline">Search Airline</string>
    <string name="search_tail_number">Search Tail Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live_flight_tracker">Live Flight Tracker</string>
    <string name="track_flights_in_real_time">Track Flights in Real Time</string>
    <string name="search_everything_easily">Search Everything Easily</string>
    <string name="stay_updated_instantly">Stay Updated Instantly</string>
    <string name="weather_at_destination">Weather at Destination</string>
    <string name="save_flights_you_care_about">Save Flights You Care About</string>
    <string name="built_for_sky_enthusiasts">Built for Sky Enthusiasts</string>
    <string name="find_arrivals">Find Arrivals &amp; Departures</string>
    <string name="flight_details_overview">Flight Details Overview</string>
    <string name="tell_us_how_will_you_use_this_app">Tell us how will you use this app?</string>
    <string name="welcome">Welcome</string>
    <string name="follow_flights">Follow Flights</string>
    <string name="view_flight_schedules">View Flight Schedules</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="manufacturer_build_info"><![CDATA[Manufacturer & Build Info]]></string>
    <string name="engine_technical_spec"><![CDATA[Engine & TECHNICAL SPEC]]></string>
    <string name="scheduled">Scheduled</string>
    <string name="flight_schedule">Flight Schedule</string>
    <string name="flight_schedules">Flight Schedules</string>
    <string name="find_history_of_a_flight">Find history of a flight.</string>
    <string name="search_by_iata_icao_code_or_city_name_nexample_lax_dxb_london_heathrow">Search by IATA/ICAO code or city name.\nExample: LAX, DXB, London Heathrow.</string>
    <string name="search_date">Search Date</string>
    <string name="quaid_e_azam_internation_airport_karachi">Quaid-e-Azam Internation Airport Karachi</string>
    <string name="qtr_611">QTR-611</string>
    <string name="qr611">QR611</string>
    <string name="a359">A359</string>
    <string name="this_flight_is_not_currently_on_tracked_or_en_route">This Flight IS Not Currently On Tracked or en route</string>
    <string name="aircraft_overview">Aircraft Overview</string>
    <string name="boeing_737_300">Boeing 737-300</string>
    <string name="model_name">Model Name</string>
    <string name="model_code">Model Code</string>
    <string name="b737_373">B737-373</string>
    <string name="boeing_737">Boeing 737</string>
    <string name="aircraft_type">Aircraft Type</string>
    <string name="registration_number">Registration Number</string>
    <string name="iata_model">IATA Model</string>
    <string name="icao_hex">ICAO Hex</string>
    <string name="construction_number">Construction Number</string>
    <string name="important_dates">Important Dates</string>
    <string name="august_2_1986">August 2, 1986</string>
    <string name="first_flight">First Flight</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="registration_date">Registration Date</string>
    <string name="rollout_date">Rollout Date</string>
    <string name="engine_count">Engine Count</string>
    <string name="engine_type">Engine Type</string>
    <string name="plane_class">Plane Class</string>
    <string name="n_a">N/A</string>
    <string name="jet">Jet</string>
    <string name="landed">Landed</string>
    <string name="_2">2</string>
    <string name="_1260">1260</string>
    <string name="_77">77</string>
    <string name="line_no">Line No</string>
    <string name="series">Series</string>
    <string name="production_line">Production Line</string>
    <string name="b733">B733</string>
    <string name="_10_24_hrs">10:24 HRS</string>
    <string name="active">Active</string>
    <string name="flight_details">Flight Details</string>
    <string name="american_airlines">American Airlines</string>
    <string name="country">Country</string>
    <string name="delay">Delay</string>
    <string name="_44">44</string>
    <string name="_17_05">17:05</string>
    <string name="altitude">Altitude</string>
    <string name="_7609_9">7609.9</string>
    <string name="direction">Direction</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="h_speed">H.Speed</string>
    <string name="_880_9">880.9</string>
    <string name="v_speed">V.Speed</string>
    <string name="_22_08">22.08</string>
    <string name="en_route">En-Route</string>
    <string name="squawk">Squawk</string>
    <string name="_1289">1289</string>
    <string name="favourite_list">Favourite List</string>
    <string name="sea">SEA</string>
    <string name="alt">ALT</string>
    <string name="next_departure_in_two_days">Next Departure: In Two Days</string>
    <string name="_5_15_am">5:15 AM</string>
    <string name="_26_june_2025">26 JUNE,2025</string>
    <string name="multan">Multan</string>
    <string name="mux">(MUX)</string>
    <string name="karachi">Karachi</string>
    <string name="kah">(KAH)</string>
    <string name="_3_10_am">3:10 AM</string>
    <string name="actual">ACTUAL</string>
    <string name="flight_time">FLIGHT TIME</string>
    <string name="_2_05_hrs">2:05 HRS</string>
    <string name="_5_10_am">5:10 AM</string>
    <string name="estimated">ESTIMATED</string>
    <string name="arrival">Arrival</string>
    <string name="departure">Departure</string>
    <string name="tracked_flight">Tracked Flight</string>
    <string name="today">Today</string>
    <string name="gate">Gate</string>
    <string name="_74">74</string>
    <string name="choose_region">Choose Region</string>
    <string name="light_simple">Light Simple</string>
    <string name="apply">Apply</string>
    <string name="b_45464">B-45464</string>
    <string name="pia">PIA</string>
    <string name="search_aircraft">Search Aircraft</string>
    <string name="bf1420">BF1420</string>
    <string name="jinnah_international">Jinnah International</string>
    <string name="karachi_pakistan">Karachi-Pakistan</string>
    <string name="khi_opkc">KHI/OPKC</string>
    <string name="_13_km">13 Km</string>
    <string name="get_directions">Get Directions</string>
    <string name="isb">ISB</string>
    <string name="islamabad">ISLAMABAD</string>
    <string name="ke3043">KE3043</string>
    <string name="doh">DOH</string>
    <string name="doha">DOHA</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="_514_kts">514 Kts</string>
    <string name="speed">Speed</string>
    <string name="_34_000_ft">34,000 ft</string>
    <string name="boing">Boing</string>
    <string name="details">Details</string>
    <string name="status">Status</string>
    <string name="airline_track">Airline Track</string>
    <string name="aircraft_track">Aircraft Track</string>
    <string name="tv_ireland">Ireland</string>
    <string name="tv_america">America</string>
    <string name="tv_england">England</string>
    <string name="tv_newzeland">Newzeland</string>
    <string name="tv_australia" translatable="false">Australia</string>
    <string name="you_re_offline_please_check_your_internet_connection_and_try_again">You\'re offline. Please check your internet connection and try again.</string>
    <string name="open_setting">Open Setting</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="you_re_not_following_any_flights_yet">You\'re not following any flights yet.</string>
    <string name="no">No!</string>
    <string name="yes_sure">Yes, Sure</string>
    <string name="exit_app">Exit App</string>
    <string name="are_your_sure_you_want_to_exit_app">Are your sure, you want to exit app</string>
    <string name="cancel">Cancel</string>
    <string name="something_went_wrong_while_loading_live_flight_information_tap_retry_to_refresh_and_try_again">Something went wrong while loading live flight information. Tap Retry to refresh and try again.</string>
    <string name="flight_data_unavailable">Flight Data Unavailable</string>
</resources>