<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_146sdp"
        android:background="@drawable/surface_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            style="@style/sfb14p"
            android:text="@string/flight_data_unavailable"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/tvBody"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            style="@style/sfr12s"
            android:text="@string/something_went_wrong_while_loading_live_flight_information_tap_retry_to_refresh_and_try_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvSubTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />

        <TextView
            android:id="@+id/negativeBtn"
            style="@style/sfb12acc1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/search_airport_uns_tab_bg"
            android:gravity="center"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/positiveBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/positiveBtn" />

        <TextView
            android:id="@+id/positiveBtn"
            style="@style/sfb12primary"
            android:layout_width="0dp"
            android:layout_height="@dimen/_33sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/search_airport_s_tab_bg"
            android:gravity="center"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/negativeBtn"
            app:layout_constraintTop_toBottomOf="@+id/tvBody" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>